2006-06-09  Jean-Louis Martineau <martineau@zmanda.com>
	* recover-src/amrecover.c (sigint_handler): Call send_command only if
						    amindexd is aliave.

2006-06-09  Jean-Louis Martineau <martineau@zmanda.com>
	* common-src/util.c (connect_port): ETIMEDOUT is a fatal error.

2006-06-09  Jean-Louis Martineau <martineau@zmanda.com>
	* common-src/stream.c (stream_client_internal): Get errno set
							correctly.
	* server-src/driver.c (handle_chunker_result): Don't asserti(0) on
			      receive of a TRYAGAIN from a chunker, but set
			      chunker->result.
	* server-src/dumper.c: Try gethostbyname("localhost") before calling
			       stream_client and log appropriate message.

2006-06-09  Jean-Louis Martineau <martineau@zmanda.com>
	* server-src/amcheck.c: Report ERROR if gethostbyname("localhost")
				doesn't succeed.

2006-06-08  Jean-Louis Martineau <martineau@zmanda.com>
	* client-src/clientconf.c (add_client_conf): New function to map
						     normal option to their
						     -o equivalent.
	* client-src/clientconf.h (add_client_conf): Prototype.
	* man/xml-source/amrecover.8.xml: Document -o.
	* recover-src/amrecover.c: Also read <config>/amanda-client.conf

2006-06-08  Jean-Louis Martineau <martineau@zmanda.com>
	* server-src/diskfile.c (parse_diskline): Only return 0 or -1.

2006-06-08  Jean-Louis Martineau <martineau@zmanda.com>
	* amandad-src/amandad.h (g_option_t): Add auth.
	* amandad-src/amandad_util.c (init_g_options): Set auth to NULL.
	* amandad-src/amandad_util.c (parse_g_options): Parse auth.
	* amandad-src/amandad_util.c (free_g_options): Free auth.
	* client-src/sendbackup.c: Get amandad_auth from command line and
				   compare with REQ packet.
	* common-src/amfeatures.h (fe_amindexd_options_hostname,
				   fe_amindexd_options_features,
				   fe_amindexd_options_auth,
				   fe_amidxtaped_options_hostname,
				   fe_amidxtaped_options_features,
				   fe_amidxtaped_options_auth): New amfeatures.